2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* unstrip.c (adjust_relocs): Move adjust_reloc function to...
	(adjust_reloc): ... here as static top-level function taking
	a map array and size as extra arguments.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* elflint.c (check_attributes): Rename and move left function...
	(buffer_left): ...as static toplevel function taking both an
	Elf_Data pointer argument and the unsigned char pointer p.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* elflint.c (check_attributes): Rename and move pos function...
	(buffer_pos): ...as static toplevel function taking an extra
	Elf_Data pointer argument.

2021-02-12  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_units): Type DIE offset is from start CU.

2021-02-12  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Don't handle blocks as expression
	blocks for DWARF version 4 or higher.

2021-02-03 Timm Bäder <tbaeder@redhat.com>

	* ar.c (do_oper_extract): Extract should_truncate_fname function
	to...
	(should_truncate_fname): ...here. New file scope function taking
	size_t pointer to be read and/or set.

2021-02-02 Timm Bäder <tbaeder@redhat.com>

	* readelf.c (print_debug_line_section): Remove unnecessary
	show_op_index variable, replace with (op_index > 0).

2021-01-08  Timm Bäder  <tbaeder@redhat.com>

	* readelf.c (print_cfa_program): Lift regname function to...
	(regname): ...here. New file scope function add ebl and regnamebuf
	as arguments.

2021-01-08  Timm Bäder  <tbaeder@redhat.com>

	* readelf.c (print_attributes): Lift left function to...
	(left): ...here. New file scope function taking Elf_Data and char
	pointers.

2021-01-08  Timm Bäder  <tbaeder@redhat.com>

	* readelf.c (handle_core_registers): Lift same_set function to...
	(same_set): ...here. New file scope function adding regs and
	maxnreg arguments.

2021-01-08  Timm Bäder  <tbaeder@redhat.com>

	* readelf.c (parse_opt): Lift add_dump_section function to...